[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Chest.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/chest/Individual Sprites/normal-chest-open-01.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/chest/Individual Sprites/normal-chest-open-03.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/chest/Individual Sprites/normal-chest-open-00.png" type="Texture" id=4]
[ext_resource path="res://images/enemies/chest/Individual Sprites/normal-chest-open-02.png" type="Texture" id=5]
[ext_resource path="res://images/keyboard_sprites/kb_dark_all.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": false,
"name": "open",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.0511, 9.89113 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 80, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 32, 80, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 1.5
} ]

[node name="RigidBody2D" type="RigidBody2D"]
z_as_relative = false
collision_layer = 0
collision_mask = 4
mode = 2
gravity_scale = 5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "open"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
scale = Vector2( 1.2, 1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 7 )
scale = Vector2( 1.2, 1 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="KeyPress" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = SubResource( 5 )
playing = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
